# einkaufszettel

./: Cargo.toml  flake.nix  watch.sh
client/: index.css  index.html  index.js  manifest.json  todo-item.css
src/: main.rs
